# rag-eval-system

./: .agent.md  .env.example  .env.local  .gitignore  AGENT.md  API.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample.md  start_demo.sh  stop_demo.sh
.do/: app.yaml
.github/workflows/: ci.yml  deploy-azure.yml
app/: logging_config.py  main.py
app/cache/: __init__.py  embedding_cache.py  query_cache.py
app/core/: embedder.py  generator.py  loaders.py  pipeline.py  retriever.py
app/models/: schemas.py
app/routes/: ingest.py  query.py
app/workers/: __init__.py  embedding_worker.py
docs/: azure-deploy.md  digitalocean-deploy.md
eval/: build_corpus.py  check_regression.py  corpus.md  dataset.json  dataset.py  run_eval.py  run_eval_local.py
eval/results/: README.md  run_2026-05-01.json
mlflow_tracking/: log_experiment.py
tests/: test_ingest.py  test_query.py  test_workers.py
ui/: index.html
