[project]
name = "rag-eval-system"
version = "0.1.0"
description = "Production RAG System with Evaluation Harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-openai==0.1.25",
    "langchain-anthropic==0.1.12",
    "qdrant-client==1.10.1",
    "ragas==0.1.21",
    "mlflow==2.15.0",
    "pymupdf==1.24.9",
    "rank-bm25==0.2.2",
    "pydantic==2.8.0",
    "python-multipart==0.0.9",
    "httpx==0.27.0",
    "pytest==8.3.2",
    "python-dotenv==1.0.1",
    "tqdm==4.66.0",
    "datasets==2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.uv]
dev-dependencies = []
